# dsds

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FEATURE_SELECTION.md  README.md  eda.py  examples.ipynb  pyproject.toml  readme.md  requirements.txt  text_data.py
data/: advertising.csv
examples/: blueprint.pickle  builder.ipynb  dependency  dsds_comparisons.ipynb  dsds_data_screening.ipynb  dsds_dependency_detection.ipynb  dsds_feature_selection.ipynb  dsds_mrmr_tutorial.ipynb  empty.json  encoders.ipynb  examples.ipynb  general_examples.ipynb  general_usage.ipynb  modelled_pipe.pkl  mrmr_example.ipynb  mutual_information.ipynb  pipe.json  pipeline.ipynb  test.ipynb  test.json
examples/blueprints/: my_project.json
python/dsds/: __init__.py  blueprint.py  compare.py  diagnosis.py  dsds.py  dsds_exprs.py  encoders.py  fs.py  metrics.py  optuna_integration.py  prescreen.py  sample.py  sklearn_compat_transfom.py  test_text.py  text.py  transform.py  type_alias.py  utils.py
python/dsds/polars_extension/: expression_lib.py
python/dsds/polars_extensions/: expression_lib.py
src/: eda_builder.py  eda_utils.py  examples.ipynb  lib.rs  main.rs  mrmr_example.ipynb  text.rs
src/dsds/: __init__.py  _builder.py  _transform.py  blueprint.py  builder.py  builder2.py  encoders.py  fs.py  metrics.py  prescreen.py  sample.py  split.py  text.py  transform.py  type_alias.py  utils.py
src/eda/: eda_builder.py  eda_misc.py  eda_prescreen.py  eda_selection.py  eda_text.py  eda_transformations.py
src/functions/: estimates.rs  math.rs  metrics.rs  mod.rs  time_series.rs
src/linalg/: metrics.rs
src/snowball/: mod.rs
src/text/: consts.rs  mod.rs  text.rs
tests/: dsds_benchmarks.py  dsds_encoders.py  dsds_prescreen.py  dsds_transform.py
